--- a/cep-search/style.css
+++ b/cep-search/style.css
@@ -86,6 +86,17 @@ input {
 	border: 1.5px var(--light-old-black) solid;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+	-moz-appearance: textfield;
+}
+
 input:focus {
 	outline: 3px var(--dark-old-black) solid;
 }
