--- a/jane-doe/css/styles.css
+++ b/jane-doe/css/styles.css
@@ -37,14 +37,20 @@ header {
 }
 
 header nav {
-	padding: 30px 0 10px 0;
+	padding: 30px 0 0 0;
 }
 
 header nav ul {
 	list-style: none;
 	display: flex;
-	justify-content: space-between;
-	padding: 0 38vw;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	max-width: 400px;
+	margin: auto;
+}
+
+header nav ul li {
+	margin: 5px;
 }
 
 header nav ul li .selected,
@@ -60,24 +66,34 @@ header nav ul li a {
 #banner {
 	background-image: url(../img/jane.jpg);
 	width: 100%;
-	height: 700px;
+	height: 600px;
 	background-size: cover;
-	margin-top: -90px;
+	background-position: center 30%;	
 }
 
 section article {
-	margin: 100px 200px;
+	margin: 100px 16vw 0;
+}
+
+#illustration-and-songs {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+}
+
+#illustration {
+	width: 50%;
+	padding-bottom: 50px;
+	min-width: 320px;
+	margin: auto 0;
 }
 
 #illustration img {
-	width: 50%;
-	float: left;
-	padding-bottom: 50px;
+	width: 100%;
 }
 
 #songs {
 	padding: 50px;
-	float: left;
 }
 
 #songs ol li {
@@ -96,4 +112,25 @@ footer {
 	align-items: center;
 	padding: 10px 0;
 	clear: both;
+}
+
+@media (max-width: 800px) {
+	section article {
+		margin: 100px 10vw;
+	}
+
+	#illustration img {
+		width: 100%;
+	}
+}
+
+@media (min-width: 720px) {
+	#illustration {
+		width: 50%;
+		min-width: 0;
+	}	
+	
+	#songs {
+		max-width: 50%;
+	}
 }
